# Bowler

./: .gitignore  .travis.yml  CHANGELOG.md  CNAME  CONTRIBUTING.md  MAINTAINERS.md  MANIFEST.in  README.md  help.html  index.html  makefile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  users.html
.github/workflows/: build.yml
blog/: atom.xml  feed.xml  index.html
bowler/: README.md  __init__.py  __main__.py  helpers.py  imr.py  main.py  query.py  tool.py  type_inference.py  types.py
bowler/tests/: __init__.py  __main__.py  helpers.py  lib.py  query.py  smoke-selftest.py  smoke-target.py  smoke.py  tool.py  type_inference.py
css/: main.css
docs/: api-commands.html  api-commands.md  api-filters.html  api-filters.md  api-modifiers.html  api-modifiers.md  api-query.md  api-selectors.html  api-selectors.md  basics-intro.html  basics-intro.md  basics-refactoring.html  basics-refactoring.md  basics-setup.html  basics-setup.md  basics-usage.html  basics-usage.md  dev-intro.html  dev-intro.md  dev-roadmap.html  dev-roadmap.md
docs/api-commands/: index.html
docs/api-filters/: index.html
docs/api-modifiers/: index.html
docs/api-query/: index.html
docs/api-selectors/: index.html
docs/basics-intro/: index.html
docs/basics-refactoring/: index.html
docs/basics-setup/: index.html
docs/dev-intro/: index.html
en/: index.html  users.html
help/: index.html
scripts/: check_copyright.sh
users/: index.html
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js  sidebars.json  siteConfig.js
(+37 files in other folders)
