[coverage:run]
branch = True
source = bowler

[coverage:report]
fail_under = 65
precision = 1
show_missing = True
skip_covered = True

[isort]
combine_as_imports = True
force_grid_wrap = False
include_trailing_comma = True
line_length = 88
multi_line_output = 3
use_parentheses = True

[mypy]
ignore_missing_imports = True

[metadata]
name = bowler
description = Safe code refactoring for modern Python projects
long_description_content_type = text/markdown
author = John Reese, Facebook
author_email = jreese@fb.com
url = https://github.com/facebookincubator/bowler
classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
license = MIT

[options]
packages =
  bowler
  bowler.tests
test_suite = bowler.tests
python_requires = >=3.6
setup_requires =
  setuptools>=38.6.0

[options.entry_points]
console_scripts =
  bowler = bowler.main:main
